# MyProjects

./: CMakeLists.txt
src/: GlassFinder.cpp  main.cpp
